# msp430fr247x-hal

./: CHANGELOG.md  Cargo.toml  README.md  debug.sh  memory.x  run.sh
.cargo/: config
.github/workflows/: build.yml
examples/: alternate.rs  blinky.rs  capture.rs  capture_intr.rs  clocks.rs  echo.rs  gpio_interrupts.rs  loopback.rs  pwm.rs  rtc.rs  timer.rs
src/: capture.rs  clock.rs  fram.rs  gpio.rs  lib.rs  pmm.rs  prelude.rs  pwm.rs  rtc.rs  serial.rs  timer.rs  watchdog.rs
src/hw_traits/: eusci.rs  gpio.rs  timerb.rs
