[package]
name = "msp430fr247x-hal"
version = "0.1.1"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>", "EnmanuelParache <enmanuelparache@gmail.com>"]
edition = "2021"
description = "Implementation of embedded-hal for microcontrollers MSP430FR2475 and MSP430FR2476"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EnmanuelParache/msp430fr247x-hal"
keywords = ["no-std", "msp430", "ti", "launchpad", "embedded-hal"]
documentation = "https://docs.rs/msp430fr247x-hal"

[dependencies]
msp430 = "0.4.0"
nb = "0.1.3"
void = { version = "1.0.2", default-features = false }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
msp430fr247x = { version = "0.1.0", features = ["rt", "critical-section"] }

[dev-dependencies]
panic-msp430 = "0.4.0"
panic-never = "0.1.0"
msp430-rt = "0.4.0"
critical-section = "1.0.0"
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "fat"
# debug = true

[profile.dev]
opt-level = "s"
codegen-units = 1
lto = "fat"
debug = true

[profile.dev.package."*"]
opt-level = "s"
